--- a/eds/templates/index/index.html
+++ b/eds/templates/index/index.html
@@ -174,17 +174,18 @@
                                   <a href="#" class=" link-soft-black basis20p basis40p-md basis20p-lg block" style="overflow: hidden;height:90px">
                                     <img class="w100p block" src="/static/images/2f738bd4b31c870196365d5d257f9e2f0608ff8d.jpeg" alt="Project" style="width:90px"></a>
                                   <div class="basis60p-md basis80p">
-                                    <a class="type-14 block link-soft-black" href="#" style="font-weight: 700;font-size: 15px;">周志华1-1</a>
+                                    <a class="type-14 block link-soft-black" href="#" style="font-weight: 700;font-size: 15px;">周志华</a>
                                     <div class="type-12  display-none block-md percent-funded" style="margin-top:5px">
                                       <i ><img style="width: 11px;" src="/static/images/QQ截图20180605220909.png"/></i>
                                         <span style="padding-left: 7px">教授</span>
                                     </div>
                                     <div class="type-12 display-none block-md percent-funded" style="margin-bottom:5px">
                                       <i ><img style="width: 7px;" src="/static/images/QQ截图20180605220840.png"/></i>
-                                        <span style="padding-left: 10px"> 南京大学 计算机系</span>
+                                        <span style="padding-left: 10px"> 南京大学 人工智能学院</span>
                                     </div>
-                                    <div class="btn-u btn-brd round btn-u-xs btn-interest ng-scope btn-hover"><a href="" style="color: gray;" class="font-xs ng-binding">机器学习</a></div>
+                                    <div class="btn-u btn-brd round btn-u-xs btn-interest ng-scope btn-hover"><a href="" style="color: gray;" class="font-xs ng-binding">人工智能</a></div>
                                     <div class="btn-u btn-brd round btn-u-xs btn-interest ng-scope btn-hover"><a href="" style="color: gray;" class="font-xs ng-binding">知识图谱</a></div>
+                                    <div class="btn-u btn-brd round btn-u-xs btn-interest ng-scope btn-hover"><a href="" style="color: gray;" class="font-xs ng-binding">数据挖掘</a></div>
                                   </div>
                                   <div class="pl6 display-none block-md">
                                     <div>
@@ -198,10 +199,20 @@
                               <li class="flex items-start w100p py3 border-bottom border-grey-500">
                                 <div class="flex items-center justify-between w100p">
                                   <a href="#" class=" link-soft-black basis20p basis40p-md basis20p-lg block" style="overflow: hidden;height:90px">
-                                    <img class="w100p block" src="/static/images/2f738bd4b31c870196365d5d257f9e2f0608ff8d.jpeg" alt="Project" style="width:90px"></a>
+                                    <img class="w100p block" src="/static/images/u=677049276,4238309690&fm=58.jpg" alt="Project" style="width:90px"></a>
                                   <div class="basis60p-md basis80p">
-                                    <a class="type-14 block link-soft-black" href="#">周志华1</a>
-                                    <div class="type-12 dark-grey-400 display-none block-md percent-funded">机器学习</div></div>
+                                    <a class="type-14 block link-soft-black" href="#" style="font-weight: 700;font-size: 15px;">漆桂林</a>
+                                    <div class="type-12  display-none block-md percent-funded" style="margin-top:5px">
+                                      <i ><img style="width: 11px;" src="/static/images/QQ截图20180605220909.png"/></i>
+                                        <span style="padding-left: 7px">教授</span>
+                                    </div>
+                                    <div class="type-12 display-none block-md percent-funded" style="margin-bottom:5px">
+                                      <i ><img style="width: 7px;" src="/static/images/QQ截图20180605220840.png"/></i>
+                                        <span style="padding-left: 10px"> 东南大学 计算机科学与工程学院</span>
+                                    </div>
+                                    <div class="btn-u btn-brd round btn-u-xs btn-interest ng-scope btn-hover"><a href="" style="color: gray;" class="font-xs ng-binding">人工智能</a></div>
+                                    <div class="btn-u btn-brd round btn-u-xs btn-interest ng-scope btn-hover"><a href="" style="color: gray;" class="font-xs ng-binding">语义网络</a></div>
+                                  </div>
                                   <div class="pl6 display-none block-md">
                                     <div>
                                       <button class="pill bg-white h6 w6 ksr-tooltip-no-focus text-nowrap flex p0 keyboard-focusable-transparent z1 no-outline" data-tooltip="Remind Me">
@@ -214,10 +225,20 @@
                               <li class="flex items-start w100p py3 border-bottom border-grey-500">
                                 <div class="flex items-center justify-between w100p">
                                   <a href="#" class=" link-soft-black basis20p basis40p-md basis20p-lg block" style="overflow: hidden;height:90px">
-                                    <img class="w100p block" src="/static/images/2f738bd4b31c870196365d5d257f9e2f0608ff8d.jpeg" alt="Project" style="width:90px"></a>
+                                    <img class="w100p block" src="/static/images/20180416145116139768456.jpg" alt="Project" style="width:90px"></a>
                                   <div class="basis60p-md basis80p">
-                                    <a class="type-14 block link-soft-black" href="#">周志华1</a>
-                                    <div class="type-12 dark-grey-400 display-none block-md percent-funded">机器学习</div></div>
+                                    <a class="type-14 block link-soft-black" href="#" style="font-weight: 700;font-size: 15px;">郑莉</a>
+                                    <div class="type-12  display-none block-md percent-funded" style="margin-top:5px">
+                                      <i ><img style="width: 11px;" src="/static/images/QQ截图20180605220909.png"/></i>
+                                        <span style="padding-left: 7px">教授</span>
+                                    </div>
+                                    <div class="type-12 display-none block-md percent-funded" style="margin-bottom:5px">
+                                      <i ><img style="width: 7px;" src="/static/images/QQ截图20180605220840.png"/></i>
+                                        <span style="padding-left: 10px"> 清华大学 计算机科学与技术系</span>
+                                    </div>
+                                    <div class="btn-u btn-brd round btn-u-xs btn-interest ng-scope btn-hover"><a href="" style="color: gray;" class="font-xs ng-binding">计算机应用</a></div>
+                                    <div class="btn-u btn-brd round btn-u-xs btn-interest ng-scope btn-hover"><a href="" style="color: gray;" class="font-xs ng-binding">教育信息技术</a></div>
+                                  </div>
                                   <div class="pl6 display-none block-md">
                                     <div>
                                       <button class="pill bg-white h6 w6 ksr-tooltip-no-focus text-nowrap flex p0 keyboard-focusable-transparent z1 no-outline" data-tooltip="Remind Me">
@@ -230,10 +251,21 @@
                               <li class="flex items-start w100p py3 border-bottom border-grey-500">
                                 <div class="flex items-center justify-between w100p">
                                   <a href="#" class=" link-soft-black basis20p basis40p-md basis20p-lg block" style="overflow: hidden;height:90px">
-                                    <img class="w100p block" src="/static/images/2f738bd4b31c870196365d5d257f9e2f0608ff8d.jpeg" alt="Project" style="width:90px"></a>
+                                    <img class="w100p block" src="/static/images/0df431adcbef76093a4bafe62edda3cc7cd99e02.jpg" alt="Project" style="width:90px"></a>
                                   <div class="basis60p-md basis80p">
-                                    <a class="type-14 block link-soft-black" href="#">周志华1</a>
-                                    <div class="type-12 dark-grey-400 display-none block-md percent-funded">机器学习</div></div>
+                                    <a class="type-14 block link-soft-black" href="#" style="font-weight: 700;font-size: 15px;">秦志光</a>
+                                    <div class="type-12  display-none block-md percent-funded" style="margin-top:5px">
+                                      <i ><img style="width: 11px;" src="/static/images/QQ截图20180605220909.png"/></i>
+                                        <span style="padding-left: 7px">教授</span>
+                                    </div>
+                                    <div class="type-12 display-none block-md percent-funded" style="margin-bottom:5px">
+                                      <i ><img style="width: 7px;" src="/static/images/QQ截图20180605220840.png"/></i>
+                                        <span style="padding-left: 10px"> 电子科技大学 信息与软件工程学院</span>
+                                    </div>
+                                    <div class="btn-u btn-brd round btn-u-xs btn-interest ng-scope btn-hover"><a href="" style="color: gray;" class="font-xs ng-binding">信息系统安全</a></div>
+                                    <div class="btn-u btn-brd round btn-u-xs btn-interest ng-scope btn-hover"><a href="" style="color: gray;" class="font-xs ng-binding">电子商务</a></div>
+                                    <div class="btn-u btn-brd round btn-u-xs btn-interest ng-scope btn-hover"><a href="" style="color: gray;" class="font-xs ng-binding">计算机开放系统与网络安全性</a></div>
+                                  </div>
                                   <div class="pl6 display-none block-md">
                                     <div>
                                       <button class="pill bg-white h6 w6 ksr-tooltip-no-focus text-nowrap flex p0 keyboard-focusable-transparent z1 no-outline" data-tooltip="Remind Me">
