--- a/eds/templates/base/base.html
+++ b/eds/templates/base/base.html
@@ -79,13 +79,13 @@
                 </div>
                 <div class=" div_line"></div>
                 <div class=" div_line" style="text-align:center; ">
-                    <a href="#"><img style=" height:30px;    position: absolute; left: 39%; top: 22px;"  src="../../static/images/expertlogo.png"/></a>
+                    <a href="/index/index"><img style=" height:30px;    position: absolute; left: 39%; top: 22px;"  src="../../static/images/expertlogo.png"/></a>
                 </div>
                 <div class=" div_line">
                 </div>
 
                 <div class=" div_line" style="padding:0px 40px 0px 0px;margin:0;float:right">
-                    <a href="#" style="line-height: 0;font-size: 1.45rem;color:#282828;">登 录</a>
+                    <a href="/login/gologin" style="line-height: 0;font-size: 1.45rem;color:#282828;">登 录</a>
                 </div>
                 <div class=" div_line" style="float:right">
                     <button type="button" class="btn btn-default navbar-btn" id="bt_display" @click="openSearchDiv"  style="padding:0px 15px 0px 0px;margin:0;font-size: 1.45rem;color:#282828;background-color:#fff;">搜 索<i class="glyphicon glyphicon-search" style="padding-left:10px;"></i></button>
