--- a/eds/static/css/expertstyle.css
+++ b/eds/static/css/expertstyle.css
@@ -17,7 +17,6 @@
 
 
 
-
 /*
  * Tab标签
  */
@@ -102,5 +101,53 @@
   width: -webkit-fit-content;
   margin-right: auto;
   margin-right: auto;
+
+}
+
+
+#myTabContent h3 {
+    font-size: 2.1rem;
+    margin-bottom: 3rem;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+#myTabContent span,strong {
+    font-size: 1.6rem;
+    line-height: 3rem;
+    margin-bottom: 1rem;
+}
+
+
+#myTabContent p {
+    font-size: 1.6rem;
+    line-height: 3rem;
+    margin-bottom: 1rem;
+    text-indent:2em;
+    padding-left:40px;
+}
+
+.my-tab-ul{
+    list-style-type:none;
+}
+
+#page2 strong {
+    font-size: 1.6rem;
+    line-height: 2rem;
+    margin-bottom: 1rem;
+}
+
+#page2 p {
+    font-size: 1.4rem;
+    line-height: 2rem;
+    margin-bottom: 1rem;
+    text-indent:0em;
+    padding-left:0px;
+    margin:0;
+
+}
+
+#page2 ul {
+    padding:0;
 
 }
