学校主页前端后台

--- a/eds/templates/main/profile.html
+++ b/eds/templates/main/profile.html
@@ -51,7 +51,7 @@
     					<td>
     						<div class="icon-text"><i class="fa fa-link"></i>个人主页</div>
     					</td>
-    					<td style="padding-left: 10px;"><div><a href="{{ info_dict["homepage"] }}" class="icon-text">点击进入个人主页</a></div></td>
+    					<td style="padding-left: 10px;"><div><a href="{{ info_dict['homepage'] }}" class="icon-text">点击进入个人主页</a></div></td>
     				</tr>
     			</table>
     		</div>
