--- a/eds/templates/base/base.html
+++ b/eds/templates/base/base.html
@@ -90,7 +90,14 @@
                 </div>
 
                 <div class=" div_line" style="padding:0px 40px 0px 0px;margin:0;float:right">
-                    <a href="/login/gologin" style="line-height: 0;font-size: 1.45rem;color:#282828;">登 录</a>
+                    {% if session['username']  %}
+                    <a href="/index/index" style="line-height: 0;font-size: 1.45rem;color:#282828;">{{session['username']}}</a>
+                    {% else %}
+                    <a href="/login/gologin" style="line-height: 0;font-size: 1.45rem;color:#282828;">登 陆</a>
+                    {% endif %}
+
+
+
                 </div>
                 <div class=" div_line" style="float:right">
                     <button type="button" class="btn btn-default navbar-btn" id="bt_display" @click="openSearchDiv"  style="padding:0px 15px 0px 0px;margin:0;font-size: 1.45rem;color:#282828;background-color:#fff;">搜 索<i class="glyphicon glyphicon-search" style="padding-left:10px;"></i></button>
