--- a/eds/templates/index/index.html
+++ b/eds/templates/index/index.html
@@ -135,7 +135,7 @@
                                   </svg>
                                 </button>
                               </div>
-                              <img class="mb1 mb3-lg w100p block" src="/static/images/20150329211117872.jpg" alt="Project">
+                              <img class="mb1 mb3-lg w100p block" src="/static/images/timg.jpg" alt="Project">
                               <div class="absolute-lg b0 p3-lg mb6 mb0-md">
                                 <div>
                                   <p>
@@ -172,7 +172,7 @@
                               <li class="flex items-start w100p py3 border-bottom border-grey-500">
                                 <div class="flex items-center justify-between w100p">
                                   <a href="#" class=" link-soft-black basis20p basis40p-md basis20p-lg block" style="overflow: hidden;height:90px">
-                                    <img class="w100p block" src="/static/images/2f738bd4b31c870196365d5d257f9e2f0608ff8d.jpeg" alt="Project" style="width:90px"></a>
+                                    <img class="w100p block" src="/static/images/u=2354587806,4172330370&fm=27&gp=0.jpg" alt="Project" style="width:90px"></a>
                                   <div class="basis60p-md basis80p">
                                     <a class="type-14 block link-soft-black" href="#" style="font-weight: 700;font-size: 15px;">周志华</a>
                                     <div class="type-12  display-none block-md percent-funded" style="margin-top:5px">
@@ -731,7 +731,7 @@
                                   </svg>
                                 </button>
                               </div>
-                              <img class="mb1 mb3-lg w100p block" src="/static/images/20150329211117872.jpg" alt="Project">
+                              <img class="mb1 mb3-lg w100p block" src="/static/images/timg.jpg" alt="Project">
                               <div class="absolute-lg b0 p3-lg mb6 mb0-md">
                                 <div>
                                   <p>
