--- a/eds/templates/main/schoolpage.html
+++ b/eds/templates/main/schoolpage.html
@@ -82,7 +82,7 @@
 								<div class="col-lg-3">
 									<div class="single-member effect-1">
 										<div class="member-image">
-											<img src="/static/images/chenrui.jpg" alt="Member">
+											<img src="/main/propic/{{ info_dict['id']}}" alt="Member">
 										</div>
 										<div class="member-info">
 											<h3>{{ i["name"] }}</h3>
