--- a/eds/templates/base/base.html
+++ b/eds/templates/base/base.html
@@ -13,6 +13,7 @@
     <script src="/static/resources/vue/vue.js"></script>
     <script src="/static/resources/layer/layer.js"></script>
     <script src="/static/js/base/base.js" ></script>
+    <script src="/static/js/base/log.js" ></script>
     <link rel="stylesheet" href="{{ url_for('static',filename='css/base.css') }}">
     <style>
          .container{width: 100%;
