--- a/eds/templates/login/login.html
+++ b/eds/templates/login/login.html
@@ -57,11 +57,11 @@
 						<div class="form-error" style="display: none;"><i></i><label class="text"></label></div>
 						<dl class="clearfix">
 							<dt>账户名：</dt>
-							<dd><input type="text"  v-model="account" name="account" id="normalUser" class="input-text" autocomplete="off" placeholder="用户名/邮箱/手机号"></dd>
+							<dd><input type="text"  v-model="account" name="account"  class="input-text" autocomplete="off" placeholder="用户名/邮箱/手机号"></dd>
 						</dl>
 						<dl class="top1 clearfix">
 							<dt>密<em></em>码：</dt>
-							<dd><input type="password"   v-model="password" name="password" id="normalPassword" class="input-text" placeholder="请输入密码" ></dd>
+							<dd><input type="password"   v-model="password" name="password" autocomplete=current-password" class="input-text" placeholder="请输入密码" ></dd>
 						</dl>
 						<div class="btn-box clearfix">
 							<input @click="login($event)" class="btn-settlement" type="submit" value="登    录" >
