首页后台部分

--- a/eds/templates/login/login.html
+++ b/eds/templates/login/login.html
@@ -13,6 +13,7 @@
     .btn_tab_login li.cur a{color:#d00;}
     #weixin_login_container iframe{width:158px;height:158px;}
     *{box-sizing: content-box;letter-spacing:0}
+	.register{font-size:12px}
 </style>
 {% endblock %}
 {% block main %}
