首页后台部分

--- a/eds/templates/base/base.html
+++ b/eds/templates/base/base.html
@@ -88,7 +88,7 @@
        <div id="myHeader" class="container-fluid" style="margin-bottom:0;min-height: 80px;background-color:#FFFFFF;">
             <div class="row" style="margin: 0;padding: 0px; ">
                 <div class=" div_line">
-                    <button type="button" class="btn btn-default navbar-btn" style="padding:0 0px 0px 40px;margin:0;font-size: 1.45rem;color:#282828;background-color:#fff;">发 现</button>
+                    <a type="button" class="btn btn-default navbar-btn" style="padding:0 0px 0px 40px;margin:0;font-size: 1.45rem;color:#282828;background-color:#fff;">发 现</a>
                 </div>
                 <div class=" div_line" style="padding:0px 0px 0px 15px;margin:0;">
                     <a href="#" style="line-height: 0;font-size: 1.45rem;color:#282828;">反馈建议</a>
@@ -111,7 +111,7 @@
 
                 </div>
                 <div class=" div_line" style="float:right">
-                    <button type="button" class="btn btn-default navbar-btn" id="bt_display" @click="openSearchDiv"  style="padding:0px 15px 0px 0px;margin:0;font-size: 1.45rem;color:#282828;background-color:#fff;">搜 索<i class="glyphicon glyphicon-search" style="padding-left:10px;"></i></button>
+                    <a type="button" class="btn btn-default navbar-btn" id="bt_display" @click="openSearchDiv"  style="padding:0px 15px 0px 0px;margin:0;font-size: 1.45rem;color:#282828;background-color:#fff;">搜 索<i class="glyphicon glyphicon-search" style="padding-left:10px;"></i></a>
                 </div>
 
             </div>
