--- a/eds/templates/base/base.html
+++ b/eds/templates/base/base.html
@@ -71,7 +71,7 @@
                                     <!-- 姓名+简介 -->
                                     <div class="col-md-8" style="padding: 0;">
                                         <h2 class="my-title2" style="padding: 0">${item.name}</h2>
-                                        <p class="my-text2" style="padding: 0"><a :href="'/main/school/'+item.school">${item.school} ${item.title}</a></p>
+                                        <p class="my-text2" style="font-size:15px;padding: 0"><a :href="'/main/school/'+item.school">${item.school}</a> ${item.title}</p>
                                         <p class="my-text2" style="padding: 0">研究领域：<span style="margin-left:10px" v-for="f in item.fields" >${f}</span></p>
                                     </div>
                                 </div>
@@ -91,7 +91,12 @@
                     <a type="button" class="btn btn-default navbar-btn" style="padding:0 0px 0px 40px;margin:0;font-size: 1.45rem;color:#282828;background-color:#fff;">发 现</a>
                 </div>
                 <div class=" div_line" style="padding:0px 0px 0px 15px;margin:0;">
-                    <a href="#" style="line-height: 0;font-size: 1.45rem;color:#282828;">反馈建议</a>
+                    {% if session['username']  %}
+                    <a href="#" style="line-height: 0;font-size: 1.45rem;color:#282828;" @click="openMessage(true)">反馈建议</a>
+                    {% else %}
+                    <a href="#" style="line-height: 0;font-size: 1.45rem;color:#282828;" @click="openMessage(false)">反馈建议</a>
+                    {% endif %}
+
                 </div>
                 <div class=" div_line"></div>
                 <div class=" div_line" style="text-align:center; ">
@@ -106,8 +111,6 @@
                     {% else %}
                     <a href="/login/gologin" style="line-height: 0;font-size: 1.45rem;color:#282828;">登 陆</a>
                     {% endif %}
-
-
 
                 </div>
                 <div class=" div_line" style="float:right">
