--- a/eds/templates/search/searchreasult.html
+++ b/eds/templates/search/searchreasult.html
@@ -94,10 +94,10 @@
               <li  v-for="item in results" class="flex items-start w100p py3 border-bottom border-grey-500">
                 <div class="flex items-center justify-between w100p">
                   <a :href="item.link" class="mr4 link-soft-black basis20p basis40p-md basis20p-lg block">
-                    <img class="w100p block" :src="'/main/propic/'+item.author_id" alt="Project"></a>
+                    <img class="w100p block img-circle"style="width:150px"  :src="'/main/propic/'+item.author_id" alt="Project"></a>
                   <div class="basis60p-md basis80p">
                     <a class="type-14 block link-soft-black" :href="item.link">${item.name}</a>
-                      <div class="type-12 dark-grey-400 display-none block-md percent-funded"><a :href="'/main/school/'+item.school">${item.school}</a></div>
+                      <div class="type-12 dark-grey-400 display-none block-md percent-funded"><a style="font-size:15px" :href="'/main/school/'+item.school">${item.school}</a></div>
                     <div><el-tag  v-on:click.native='click_word($event)' style="margin:5px" v-for="f in item.fields">${f}</el-tag></div>
                   </div>
                 </div>
