--- a/eds/templates/main/expert.html
+++ b/eds/templates/main/expert.html
@@ -36,13 +36,13 @@
                     <!-- 姓名+简介 -->
                     <div class="col-md-9" style="padding: 0px 0px 0px 60px;">
                         <h2 class="my-title1" style="padding: 20px 0px">{{ info_dict["name"] }}<small class="my-text1" style="color:#95959E;padding-left:30px;">{{ info_dict["school"] }}{{ info_dict["institution"] }} {{ info_dict["title"] }}</small></h2>
-                        <p class="my-text1" style="padding: 25px 0px 0px 0px">研究领域：{{ info_dict["fields"] }}</p>
+                        <p class="my-text1" style="padding: 25px 0px 0px 0px">研究领域：{{ info_dict["theme"] }}</p>
                     </div>
                 </div>
             </div>
 
             <!-- 河流图 -->
-            <div class="container-fluid" style="padding: 0 10% 0 0;">
+            <div class="container-fluid" style="padding: 0 0 0 0;">
                 <div class="row" style="margin: 0px 18px 40px 18px;">
                         <div id="direction" style="height: 400px;width:100%"></div>
                     </div>
@@ -119,7 +119,7 @@
             </div>
             <!--选项卡1——基本信息——2教育经历-->
             <div class="row" style="margin: 0px;padding: 20px 60px 0 60px;">
-                <h3>教育经历</h3>
+                <h3>教育经历</h3>数据处理中，敬请期待...
                 <ul class="my-tab-ul">
                     <li class="my-tab-li"><i class="glyphicon glyphicon-chevron-right"></i>
                     <span>2012年3月至今 副教授 博士生导师/IEEE senior member 计算机科学与工程学院，东南大学，期间2014年9月到2015年9月在美国威斯康辛麦迪逊大学进行访问学者的工作;</span>
@@ -138,8 +138,8 @@
             </div>
             <!--选项卡1——基本信息——3工作经历-->
             <div class="row" style="margin: 0px;padding: 20px 60px 0 60px;">
-                <h3>工作简介</h3>
-                <p>主要研究方向包括，医学图像重建与分析三维可视化及病理；低剂量CT成像；太赫兹光信号的临床应用;基于特征学习的医学图像分析。作为项目负责人获国家自然科学基金面上项目、国家青年科学基金以及江苏省自然科学基金面上项目资助；作为首要合作者参与多项国家自然科学基金重点项目、国家973项目以及863项目的研究。目前承当东南大学计算机科学与工程学院大二学生的“运筹学”课程的教学；同时承当2016年度的东南大学计算机科学与工程学院和生物医学工程学院研究生课程“现代医学成像与处理方法”课程教学。累计指导毕业研究生10名。</p>
+                <h3>工作简介</h3>数据处理中，敬请期待...
+                <p style="padding:0;">主要研究方向包括，医学图像重建与分析三维可视化及病理；低剂量CT成像；太赫兹光信号的临床应用;基于特征学习的医学图像分析。作为项目负责人获国家自然科学基金面上项目、国家青年科学基金以及江苏省自然科学基金面上项目资助；作为首要合作者参与多项国家自然科学基金重点项目、国家973项目以及863项目的研究。目前承当东南大学计算机科学与工程学院大二学生的“运筹学”课程的教学；同时承当2016年度的东南大学计算机科学与工程学院和生物医学工程学院研究生课程“现代医学成像与处理方法”课程教学。累计指导毕业研究生10名。</p>
                 <hr>
             </div>
         </div>
@@ -196,6 +196,7 @@
         <div class="tab-pane fade container-fluid" id="page3" style="padding: 0px;">
 
             <div class="row" style="margin: 0px;padding: 20px 60px 0 60px;">
+                数据处理中，敬请期待...
                 <img style="width:100%"   src="../../static/images/mytemp01.png"/>
                 <img style="width:100%"   src="../../static/images/mytemp02.png"/>
                 <img style="width:100%"  src="../../static/images/mytemp03.png"/>
@@ -208,6 +209,7 @@
         <div class="tab-pane fade container-fluid" id="page4" style="padding: 0px;">
 
             <div class="row" style="margin: 0px;padding: 20px 60px 0 60px;">
+                数据处理中，敬请期待...
                 <img style="width:100%"   src="../../static/images/mytemp06.png"/>
 
             </div>
