--- a/eds/templates/main/schoolpage.html
+++ b/eds/templates/main/schoolpage.html
@@ -92,10 +92,10 @@
 												<h5>{{ i["title"] }}</h5>
 											{% endif %}
 											<p>学院:{{ i["institution"] }}<br>
-												{% if i["fields"] == "" %}
+												{% if i["theme"] == "" %}
 													<br>
 												{% else %}
-													{{ i["fields"] }}
+													{{ i["theme"] }}
 												{% endif %}
 											</p>
 											<div class="social-touch">
