--- a/eds/templates/statistics/statistics.html
+++ b/eds/templates/statistics/statistics.html
@@ -1,10 +1,12 @@
-{% extends 'base/base.html' %}
-
-{% block titlename %}首页{% endblock %}
 
 {% block head %}
-<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
-<script src="https://unpkg.com/element-ui/lib/index.js"></script>
+
+<script src="/static/resources/flat-ui-2.2.2-dist/js/vendor/jquery.min.js"></script>
+
+<script src="/static/resources/vue/vue.js"></script>
+<script src="/static/resources/layer/layer.js"></script>
+<link rel="stylesheet" href="/static/resources/element/index.css">
+<script src="/static/resources/element/index.js"></script>
 <script src="/static/js/statistics/statistics.js"></script>
 <script src="/static/resources/echarts/myecharts.source.js" type="text/javascript"></script>
 <title>专家发现系统</title>
@@ -31,6 +33,7 @@
 {% block main %}
 
 <body>
+<h2>数据统计</h2>
 <div id="mychart">
     <el-form ref="form"  label-width="160px">
       <el-form-item label="类型">
