--- a/eds/templates/index/index.html
+++ b/eds/templates/index/index.html
@@ -177,7 +177,7 @@
                                   <a href="#" class=" link-soft-black basis20p basis40p-md basis20p-lg block" style="overflow: hidden;height:90px">
                                     <img class="w100p block" src="/main/propic/{{ teacher['id']}}" alt="Project" style="width:90px"></a>
                                   <div class="basis60p-md basis80p">
-                                    <a class="type-14 block link-soft-black" href="#" style="font-weight: 700;font-size: 15px;">{{teacher["name"]}}</a>
+                                    <a class="type-14 block link-soft-black" href="/main/expert/{{ teacher['id']}}" style="font-weight: 700;font-size: 15px;">{{teacher["name"]}}</a>
                                     <div class="type-12  display-none block-md percent-funded" style="margin-top:5px">
                                       <i ><img style="width: 11px;" src="/static/images/QQ截图20180605220909.png"/></i>
                                         <span style="padding-left: 7px">{{teacher["title"] | none_filter}}</span>
@@ -226,7 +226,7 @@
                       <div class="grid-row">
                         <div class="col-full col-md-12-24" style="margin-bottom:2.4rem">
                           <div class="type-28 mr2 inline-block">高 校</div>
-                          <a href="https://www.kickstarter.com/food-craft?ref=home" class="text-uppercase py1 type-12 inline-flex link-soft-black">View all
+                          <a href="#" class="text-uppercase py1 type-12 inline-flex link-soft-black">View all
                             <svg class="svg-icon__icon--arrow-right icon-medium ml1" aria-hidden="true">
                               <use xlink:href="#icon--arrow-right"></use></svg>
                           </a>
@@ -236,7 +236,7 @@
                         <div class="col-full col-md-12-24">
                           <section class="section_potd-block">
                             <header class="text-uppercase type-13 mb2 inline-block w100p">Featured Project</header>
-                            <a class="block relative keyboard-focusable link-soft-black" href="https://www.kickstarter.com/projects/400425204/jacqui-a-simple-handbag-company?ref=home_potd">
+                            <a class="block relative keyboard-focusable link-soft-black" href="#">
                               <div>
                                 <button class="pill bg-soft-black_50 h6 w6 ksr-tooltip-no-focus text-nowrap flex p0 keyboard-focusable-transparent z1 no-outline absolute t2 r2" data-tooltip="Remind Me">
                                   <svg class="svg-icon__icon--heart-outline icon-medium m-auto fill-white" aria-hidden="false" aria-label="Remind Me">
