--- a/eds/templates/login/login.html
+++ b/eds/templates/login/login.html
@@ -134,7 +134,13 @@
 	</div>
 </div>
 
-
+<script type="text/javascript" src="http://qzonestyle.gtimg.cn/qzone/openapi/qc_loader.js" data-appid="APPID" data-redirecturi="REDIRECTURI" charset="utf-8"></script>
+<span id="qqLoginBtn"></span>
+<script type="text/javascript">
+    QC.Login({
+       btnId:"qqLoginBtn"    //插入按钮的节点id
+});
+</script>
 
 <script type="text/javascript">
 var _wx_server_qr_code_count = 0;
