--- a/eds/static/css/login/style.css
+++ b/eds/static/css/login/style.css
@@ -15,7 +15,7 @@ table { border-collapse: collapse; border-spacing: 0 }
 th { text-align: inherit}
 caption,th { text-align: center}
 a { text-decoration: none; color: #666}
-a:hover { text-decoration: none; color: #d00 }
+a:hover { text-decoration: none; color: #009E74; }
 .clearfix:before,.clearfix:after { display: table; content: ''}
 .clearfix:after { clear: both}
 .clearfix { *zoom:1;margin-top:10px;margin-bottom:10px;}
@@ -36,17 +36,24 @@ a:hover {color: #dd0000;}
 #header{ background:#fff; height:84px; padding:0;}
 
 /*login*/
-.login-wrap{ width:100%; height:480px;    background: #36AABD;}
+.login-wrap{ width:100%; height:480px;    background: #F0F0F0;}
 .login-wrap .wrap{ width:960px; height:480px; padding:0 115px; margin:0 auto;}
 
 
 /*login右侧登录框*/
-.login-wrap .form-box{ width:380px; min-height:410px; _height:410px; margin-top:35px; background:#fff;}
+.login-wrap .form-box{
+width:380px;
+min-height:410px;
+_height:410px;
+margin-top:35px;
+margin-right:auto;
+margin-left:auto;
+background:#fff;}
 .form-box .form-tab{ width:380px; height:52px; border-bottom:1px solid #ddd; font-family:"Microsoft YaHei";}
-.form-tab .tab-li{ float:left; width:50%; height:50px; border-bottom:2px solid #fff;}
+.form-tab .tab-li{ float:left; width:50%; height:50px; border-bottom:2px solid #fff;background:rgba(241,238,234,0.2);}
 .form-tab .tab-li a{ position:relative; display:block; text-align:center; height:50px; line-height:52px; font-size:18px; color:#999; text-decoration:none;}
-.form-tab .tab-li.cur{ border-bottom-color:#d00;}
-.form-tab .tab-li.cur a{ color:#d00;}
+.form-tab .tab-li.cur{ border-bottom-color:#009E74;}
+.form-tab .tab-li.cur a{ color:#009E74;}
 .form-tab .tab-li .icon{ position:absolute; top:10px; width:18px; height:14px; margin-left:6px;}
 
 .form-box .form-con{ width:434px; height:345px; padding:38px 28px 0;}
@@ -72,7 +79,7 @@ a:hover {color: #dd0000;}
 .form-box .input-jym{width:80px;}
 .form-box .span-yzm{ position:absolute; top:-16px; right:0; width:162px; height:36px; line-height:36px; padding:8px 0; border-left:1px solid #ddd;}
 .login-add .span-yzm{ top:-14px; padding:6px 0;}
-.form-box .error .span-yzm{ border-left-color:#d00;}
+.form-box .error .span-yzm{ border-left-color:#009E74;}
 .form-box .span-yzm img{ height:36px; width:88px; margin:0 13px; vertical-align:top;}
 .form-box .span-jym{ position:absolute; top:-8px; right:6px; width:98px; height:34px; line-height:34px; text-align:center; color:#f33; font-size:12px; border:1px solid #d66; border-radius:5px; text-decoration:none;}
 .form-box .disabled{ border-color:#ccc; color:#999;}
@@ -91,11 +98,11 @@ a:hover {color: #dd0000;}
 .form-box .btn-box{ height:46px;}
 .login-add .btn-box{ height:40px;}
 .form-box .login-partner .btn-box{ height:40px;}
-.btn-settlement{ float:left; display:inline-block; height:40px; line-height:40px; width:100%; text-align:center; font-size:16px; color:#fff; -webkit-border-radius:5px; -o-border-radius:5px; -ms-border-radius:5px; border-radius:5px;background-color:#d00; outline:0 none; font-family:"Microsoft YaHei"; cursor:pointer;}
+.btn-settlement{ float:left; display:inline-block; height:40px; line-height:40px; width:100%; text-align:center; font-size:16px; color:#fff; -webkit-border-radius:5px; -o-border-radius:5px; -ms-border-radius:5px; border-radius:5px;background-color:#009E74; outline:0 none; font-family:"Microsoft YaHei"; cursor:pointer;}
 .btn-settlement:hover{ background-color:#e00;}
 .form-box .btn-box .btn-settlement{ width:270px;}
 .form-box .forget-pass{ color:#007fd7;}
-.form-box .forget-pass:hover{ color:#d00;}
+.form-box .forget-pass:hover{ color:#009E74;}
 .form-box .btn-box .forget-pass{ float:right; width:72px; margin-left:10px; line-height:40px; font-family:"Microsoft YaHei";}
 .form-box .login-short{ margin-top:18px; border-top:1px dotted #ddd;}
 .login-short h3{ font-size:12px; line-height:1; padding:17px 0 13px; color:#666;}
@@ -115,7 +122,7 @@ a:hover {color: #dd0000;}
 .form-box .form-foot{ width:482px; height:52px; padding:4px;}
 .form-box .form-foot_p{ height:52px; line-height:52px;text-align:center; background:url(../images/form-footbg.png); font-family:"Microsoft YaHei";}
 .form-foot_p .spanb{ font-size:16px;}
-.form-foot_p label{ margin-left:5px; color:#d00;}
+.form-foot_p label{ margin-left:5px; color:#009E74;}
 .form-foot_p .spans{ font-size:12px;}
 .form-dl-jym{ display:none;}
 /*register*/
@@ -135,7 +142,7 @@ a:hover {color: #dd0000;}
 /*.register-left .link-box{height:38px; line-height:38px; text-align:right; font-size:14px; color:#666;}*/
 .register-left .link-btn{ margin-left:12px;}
 .register-left .link-btn:link,.register-left .link-btn:visited{ color:#007fd7;}
-.register-left .link-btn:hover,.register-left .link-btn:active{ color:#d00;}
+.register-left .link-btn:hover,.register-left .link-btn:active{ color:#009E74;}
 .registerBox .register-right{ width:357px;}
 .register-right .link-box{ width:220px; margin:0 auto; padding:35px 0 13px; line-height:36px; font-size:14px; color:#666; text-align:center; border-bottom:1px dotted #ddd;}
 .register-right .right-p{ line-height:1; text-align:center; color:#666; margin-top:26px; font-size:14px;}
@@ -218,7 +225,7 @@ a:hover {color: #dd0000;}
 #jia_footer { margin-top: 50px; padding-bottom: 20px; background-color:#fff}
 #jia_footer a { color: #999}
 #jia_footer p { text-align: center}
-#jia_footer a:hover { color: #d00}
+#jia_footer a:hover { color: #009E74}
 .jia_foot_info { text-align: center}
 .jia_foot_info .jia_foot_link { padding: 10px 0; text-align: center}
 #jia_footer .jia_foot_link { padding: 10px 0; text-align: center}
@@ -255,9 +262,9 @@ a:hover {color: #dd0000;}
 .loginV2 .forget-pass,.shortLogin .forget-pass{ color:#007fd7; font-size:12px;}
 .loginV2 .link-box .forget-pass,.loginV2 .link-box .register{ float:right; width:72px; line-height:34px; font-family:"Microsoft YaHei";}
 .loginV2 .link-box .register{ float:left; color:#007fd7;}
-.loginV2 .link-box .register:hover{ color:#d00;}
+.loginV2 .link-box .register:hover{ color:#009E74;}
 .shortLogin .forgetPass,.shortLogin .backLogin{ float:left; line-height:38px; font-family:"Microsoft YaHei"; color:#007fd7;}
-.shortLogin .forgetPass:hover,.shortLogin .backLogin:hover{ color:#d00;}
+.shortLogin .forgetPass:hover,.shortLogin .backLogin:hover{ color:#009E74;}
 .shortLogin .backLogin{ float:right;}
 .loginV2 .login-short{ padding-top:18px; padding-bottom:12px; margin:0;}
 .loginV2 .short-left{ float:left; width:150px;}
@@ -265,8 +272,8 @@ a:hover {color: #dd0000;}
 .loginV2 .login-short h3{ padding:0 0 12px 0;}
 .loginV2 .login-short .phone-short{ height:33px;}
 .loginV2 .login-short .phone-short .txt{ float:left; line-height:33px; font-size:14px; color:#666;}
-.loginV2 .login-short .phone-short .txt:hover{ color:#d00;}
+.loginV2 .login-short .phone-short .txt:hover{ color:#009E74;}
 .loginV2 .login-short .phone-short .phone{ float:left; height:33px; width:33px; margin-right:7px; background:url(/static/images/login/member.png) -115px -57px no-repeat;}
 .loginV2 .login-short li{ margin-right:16px;}
 .shortLogin{ display:none;}
-.shortLogin .title{ height:40px; line-height:40px; padding-top:18px; font-size:18px; color:#d00; text-align:center;}
+.shortLogin .title{ height:40px; line-height:40px; padding-top:18px; font-size:18px; color:#009E74; text-align:center;}
