--- a/eds/templates/login/login_copy.html
+++ b/eds/templates/login/login_copy.html
@@ -7,14 +7,14 @@
     <title>keke</title>
     <link rel="stylesheet" type="text/css" href="/static/css/login/style.css">
     <script src="/static/js/login/login.js" ></script>
-<style type="text/css">
-    .btn_tab_login{float: right; margin-top: 48px;}
-    .btn_tab_login li{display: inline-block; margin-left:30px; font-size: 14px;}
-    .btn_tab_login li.cur a{color:#d00;}
-    #weixin_login_container iframe{width:158px;height:158px;}
-    *{box-sizing: content-box;letter-spacing:0}
-	.register{font-size:12px}
-</style>
+    <style type="text/css">
+        .btn_tab_login{float: right; margin-top: 48px;}
+        .btn_tab_login li{display: inline-block; margin-left:30px; font-size: 14px;}
+        .btn_tab_login li.cur a{color:#d00;}
+        #weixin_login_container iframe{width:158px;height:158px;}
+        *{box-sizing: content-box;letter-spacing:0}
+        .register{font-size:12px}
+    </style>
 {% endblock %}
 {% block main %}
 
@@ -25,7 +25,7 @@
 		<div class="form-box loginV2" style="display:block;">
 			<ul class="form-tab clearfix">
 				<li class="tab-li" :class="isLogin?'':'cur'"><a href="#" @click="isLogin=false">注册账号</a></li>
-				<li class="tab-li"  :class="isLogin?'cur':''"><a href="#" @click="isLogin=true">账号登陆</a></li>
+				<li class="tab-li"  :class="isLogin?'cur':''"><a href="#" @click="isLogin=true">账号登录</a></li>
 			</ul>
 			<div class="form-con">
 				<div class="login-normal" v-if="!isLogin">
@@ -65,7 +65,7 @@
 							<dd><input type="password"   v-model="password" name="password" autocomplete=current-password" class="input-text" placeholder="请输入密码" ></dd>
 						</dl>
 						<div class="btn-box clearfix">
-							<input @click="login($event)" class="btn-settlement" type="submit" value="登    陆" >
+							<input @click="login($event)" class="btn-settlement" type="submit" value="登    录" >
 						
 						</div>
 						<div class="link-box clearfix">
@@ -73,9 +73,9 @@
                             <a href="javascript:;" class="forget-pass" >忘记密码？</a>
                         </div>
 					</form>
-					<div class="login-short clearfix hidden">
+					<div class="login-short clearfix">
 					   <div class="short-left">
-							<h3>使用合作账号登陆：</h3>
+							<h3>使用合作账号登录：</h3>
 							<ul class="clearfix">
 								<li class="qq"><a a="" href="javascript:;" tjjj="passport.login.thd.login.qq"></a></li>
 								<li class="sina"><a href="javascript:;" tjjj="passport.login.thd.login.sina"></a></li>
@@ -86,16 +86,16 @@
                             <h3>您还可以选择：</h3>
                             <p class="phone-short clearfix">
                                 <i class="phone"></i>
-                                <a href="javascript:;" tjjj="" class="txt phoneLogin">手机快捷登陆</a>
+                                <a href="javascript:;" tjjj="" class="txt phoneLogin">手机快捷登录</a>
                             </p>
                        </div>
 					</div>
 				</div>
 			</div>
 		</div>
-			<!-- -快捷登陆 -->
+			<!-- -快捷登录 -->	
 			<div class="form-box fr shortLogin" style="display:none;">
-				<h5 class="title">快捷登陆</h5>
+				<h5 class="title">快捷登录</h5>
            		 <div class="form-con">
 					<form id="mobileLoginForm" method="post" onsubmit="return mobileLoginCheck();">
 						<div class="form-error" style="display: none;"><i></i><label class="text"></label></div>
@@ -121,11 +121,11 @@
 							</dd>
 						</dl>
 						<div class="btn-box clearfix">
-							<input id="partnerSubmit" class="btn-settlement" type="submit" value="登    陆" tjjj="passport.quick.button.login">
+							<input id="partnerSubmit" class="btn-settlement" type="submit" value="登    录" tjjj="passport.quick.button.login">
 							
 						</div>
 						<div class="link-box clearfix">
-                   			 <a href="javascript:;" class="backLogin">返回账号登陆&gt;&gt;</a>
+                   			 <a href="javascript:;" class="backLogin">返回账号登录&gt;&gt;</a>
                 		</div>
 					</form>
 					</div>
