--- a/eds/templates/main/expert.html
+++ b/eds/templates/main/expert.html
@@ -58,7 +58,7 @@
       <div style="border-top:1px solid rgba(0,0,0,0.3);border-bottom:1px solid rgba(0,0,0,0.3);">
         <ul id="myTab" class="nav nav-tabs nav-justified" >
           <li role="presentation" class="active"><a href="#page1" data-toggle="tab">基本信息</a></li>
-          <li role="presentation" ><a href="#page2" data-toggle="pill">专家文献</a></li>
+          <li role="presentation" ><a href="#page2" data-toggle="tab">专家文献</a></li>
           <li role="presentation" ><a href="#page3" data-toggle="tab">学术分析</a></li>
           <li role="presentation" ><a href="#page4" data-toggle="tab">相似学者</a></li>
         </ul>
