--- a/eds/templates/main/schoolpage.html
+++ b/eds/templates/main/schoolpage.html
@@ -46,7 +46,7 @@
 			<div style="border-bottom:1px solid;border-bottom-color: rgba(0,0,0,0.3);height: 75px;">
 				<ul id="myTab" class="nav nav-tabs nav-justified" >
 					<li role="presentation" class="active"><a href="#page1" data-toggle="tab">基本信息</a></li>
-					<li role="presentation" ><a href="#page2" data-toggle="pill">校园名师</a></li>
+					<li role="presentation" ><a href="#page2" data-toggle="tab">校园名师</a></li>
 					<li role="presentation" ><a href="#page1" data-toggle="tab">院系设置</a></li>
 					<li role="presentation" ><a href="#page2" data-toggle="tab">知名校友</a></li>
 				</ul>
